// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expect_specInterpreter_to_match_snapshots 1`] = `
Object {
  "body": Object {
    "foo": "bar",
  },
  "method": "put",
  "path": "/pet",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 2`] = `
Object {
  "body": Object {
    "foo": "bar",
  },
  "method": "post",
  "path": "/pet",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 3`] = `
Object {
  "body": undefined,
  "method": "get",
  "path": "/pet/findByStatus",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 4`] = `
Object {
  "body": undefined,
  "method": "get",
  "path": "/pet/findByTags",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 5`] = `
Object {
  "body": undefined,
  "method": "get",
  "path": "/pet/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 6`] = `
Object {
  "body": undefined,
  "method": "post",
  "path": "/pet/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 7`] = `
Object {
  "body": undefined,
  "method": "delete",
  "path": "/pet/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 8`] = `
Object {
  "body": undefined,
  "method": "post",
  "path": "/pet/foobar/uploadImage",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 9`] = `
Object {
  "body": undefined,
  "method": "get",
  "path": "/store/inventory",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 10`] = `
Object {
  "body": undefined,
  "method": "post",
  "path": "/store/order",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 11`] = `
Object {
  "body": undefined,
  "method": "get",
  "path": "/store/order/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 12`] = `
Object {
  "body": undefined,
  "method": "delete",
  "path": "/store/order/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 13`] = `
Object {
  "body": undefined,
  "method": "post",
  "path": "/user",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 14`] = `
Object {
  "body": undefined,
  "method": "post",
  "path": "/user/createWithList",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 15`] = `
Object {
  "body": undefined,
  "method": "get",
  "path": "/user/login",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 16`] = `
Object {
  "body": undefined,
  "method": "get",
  "path": "/user/logout",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 17`] = `
Object {
  "body": undefined,
  "method": "get",
  "path": "/user/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 18`] = `
Object {
  "body": undefined,
  "method": "put",
  "path": "/user/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 19`] = `
Object {
  "body": undefined,
  "method": "delete",
  "path": "/user/foobar",
}
`;
